--- a/index_styles.css
+++ b/index_styles.css
@@ -42,9 +42,9 @@ ul li{
 
 ul li a{
     text-decoration: none;
-    color: #FFFFFF;
+    color: #000000;
     padding: 5px 20px;
-    border: 1px solid #fff;
+    border: 1px solid #000000;
 }
 
 header p {
