--- a/index_styles.css
+++ b/index_styles.css
@@ -40,12 +40,12 @@ ul li{
 
 }
 
-ul li a{
+/*ul li a{
     text-decoration: none;
     color: #000000;
     padding: 5px 20px;
     border: 1px solid #000000;
-}
+}*/
 
 header p {
     margin: 0;
