--- a/index_styles.css
+++ b/index_styles.css
@@ -74,7 +74,7 @@ header p {
     position: relative;
     height: auto;
     padding: 0;
-    background-color: #FDB515;
+    background-color: #101C48;
 }
 
 #first-section .chaka-img {
