--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-	background-image: url(../HeaderBackground.png);
+	background-image: url(../GroupPhoto.png);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
