--- a/index_styles.css
+++ b/index_styles.css
@@ -24,23 +24,24 @@ header {
     font-weight: 200;
     position: absolute;
     padding: 0;
-    left: 60px;
+    left: 0px;
     top: -3px;
+    right: 0%;
 }
 
 .topnav {
     overflow: hidden;
     background-color: #101C48;
-    padding: 1px;
+    padding: 1px; /*dont change*/
 }
 
 .topnav a{
     float: left;
     color: white;
     text-align: center;
-    padding: 16px 16px;
     text-decoration: none;
     font-size: 17px;
+    padding: 16px 30px;
 
 }
 
