--- a/nodedir/content/index_styles.css
+++ b/nodedir/content/index_styles.css
@@ -20,14 +20,14 @@ body {
 }
 
 header {
-    background: #1f2630;
+    background: #070F2E;
     font-family: sofia-pro, sans-serif;
     font-weight: 300;
     position: fixed;
-    width: calc(100% - 80px);
     padding: 0;
-    left: 40px;
+    left: 0px;
     top: 0px;
+    right: 0%;
     height: 60px;
     text-align: center;
     z-index: 1000;
@@ -36,24 +36,75 @@ header {
 
 header a {
     float: left;
-    padding-left: 20px;
+    padding-left: 25px;
     padding-top: 20px;
 }
 
-#container {
+/**#container {
     position: absolute;
     min-width: calc(100% - 80px);
     max-width: calc(100% - 80px);
     left: 40px;
     top: 60px;
     background-color: #fcf6f2;
+}*/
+
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: inherit; 
+  border: none;
+  outline: none;
+  color: inherit;
+  padding-left: 25px;
+  padding-top: 20px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 
 #first-section {
     position: relative;
     height: auto;
-    padding: 0;
-    background-color: #1f2630; /* #3b7ea1;*/
+    padding-top: 60px;
+    background-color: #070F2E;
 }
 .small {
     display: none;
@@ -73,21 +124,12 @@ header a {
     width: 100%;
 }
 
-/*#second-section .family-img {*/
-/*    position: absolute;*/
-/*    right: 0;*/
-/*    display: inline-block;*/
-/*    min-height: 100px;*/
-/*    height: 100%;*/
-/*    width: 70%;*/
-/*    background-image: url("./familypic.png");*/
-/*    background-position: center;*/
-/*    background-size: cover;*/
-/*}*/
 #second-section img {
-    width: 50%;
+    width: 40%;
+    height: 40%;
     margin: 10px;
     margin-right: 20px;
+    padding-left: 30px;
 }
 
 #second-section .inner {
@@ -97,16 +139,16 @@ header a {
 }
 
 #second-section h2 {
-    padding: 0 20px;
-    margin: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
     display: inline-block;
     font-family: montserrat, sans-serif;
-    font-weight: 800;
+    font-weight: 600;
     font-style: normal;
     font-size: 2.5em;
-    color: #1f2630;
+    color: #070F2E;
     text-wrap: normal;
     word-wrap: break-word;
     text-align: center;
@@ -114,14 +156,15 @@ header a {
 
 
 #second-section p {
-    padding: 0 20px;
-    margin: 0;
-    margin-bottom: 20px;
+    padding: 20px;
+    margin: 20px;
+    margin-top: 100px;
     font-family: sofia-pro, sans-serif;
-    font-weight: 300;
+    font-weight: 500;
     font-style: normal;
-    font-size: 1.25em;
+    font-size: 1.35em;
     color: #1f2630;
+    text-align: center;
 }
 
 #third-section {
@@ -129,7 +172,6 @@ header a {
     display: inline-grid;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
-    /*height: 25vh;*/
     padding: 0;
     background-color: rgba(0, 0, 0, 0);
     background: #1f2630;
