--- a/nodedir/content/index_styles.css
+++ b/nodedir/content/index_styles.css
@@ -133,9 +133,13 @@ header a {
 }
 
 #first-section .chaka-img {
-    display: inline-block;
+    display: inline;
     height: 100%;
     width: 100%;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 #second-section img {
@@ -154,7 +158,7 @@ header a {
 
 #second-section h2 {
     margin: 10px;
-    top: 80px;
+    top: 40px;
     right: -120px;
     position: relative;
     max-width: calc(100% - 40px);
@@ -171,7 +175,7 @@ header a {
 
 #second-section p {
     margin: 20px;
-    padding-top: 120px;
+    padding-top: 70px;
     margin-top: 0px;
     font-family: sofia-pro, sans-serif;
     font-weight: 600;
@@ -179,7 +183,16 @@ header a {
     font-size: 1.35em;
     color: #1f2630;
     text-align: center;
-    border: 7px #FFFFF;
+    padding-bottom: 53px;
+}
+
+#second-section .bordertext {
+    border: 2px solid black;
+    display: table;
+    position: relative;
+    top: 40px;
+    right: 10px;
+
 }
 
 #third-section .toprow {
