--- a/nodedir/content/index_styles.css
+++ b/nodedir/content/index_styles.css
@@ -40,14 +40,14 @@ header a {
     padding-top: 20px;
 }
 
-#container {
+/*#container {
     position: absolute;
     min-width: calc(100% - 80px);
     max-width: calc(100% - 80px);
     left: 40px;
     top: 60px;
     background-color: #fcf6f2;
-}
+}*/
 
 
 /* The dropdown container */
@@ -124,14 +124,6 @@ header a {
 
 }*/
 
-#second-section {
-    color: black;
-    position: relative;
-    height: auto;
-    padding: 0;
-    /*background-color: #FDB515;*/
-}
-
 #first-section .chaka-img {
     display: inline;
     height: 100%;
@@ -142,12 +134,21 @@ header a {
 
 }
 
+#second-section {
+    color: black;
+    position: relative;
+    height: auto;
+    padding: 0;
+    /*background-color: #FDB515;*/
+}
+
 #second-section img {
     width: 40%;
     height: 40%;
     margin: 40px;
     margin-right: 20px;
-    padding-left: 30px;
+    padding-left: 10px;
+    margin-left: 0px;
 }
 
 #second-section .inner {
@@ -158,8 +159,8 @@ header a {
 
 #second-section h2 {
     margin: 10px;
-    top: 40px;
-    right: -120px;
+    top: 50px;
+    right: -160px;
     position: relative;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
@@ -175,7 +176,7 @@ header a {
 
 #second-section p {
     margin: 20px;
-    padding-top: 70px;
+    padding-top: 90px;
     margin-top: 0px;
     font-family: sofia-pro, sans-serif;
     font-weight: 600;
@@ -183,7 +184,7 @@ header a {
     font-size: 1.35em;
     color: #1f2630;
     text-align: center;
-    padding-bottom: 53px;
+    padding-bottom: 63px;
 }
 
 #second-section .bordertext {
@@ -195,10 +196,25 @@ header a {
 
 }
 
-#third-section .toprow {
+#third-section .title {
     position: relative;
     display: inline-grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: auto;
+    width: 100%;
+    padding: 0px;
+    background-color: rgba(0, 0, 0, 0);
+    background: #070F2E;
+    color: #E9DE81;
+    text-align: center;
+    font-family: sofia-pro, sans-serif;
+    font-style: normal;
+    font-size: 2em;
+}
+
+#third-section .toprow {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto;
     width: 100%;
     padding: 0;
     background-color: rgba(0, 0, 0, 0);
@@ -207,30 +223,12 @@ header a {
 
 #third-section .bottomrow {
     position: relative;
-    display: inline-grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-template-columns: auto auto auto;
     width: 100%;
     padding: 0;
     background-color: rgba(0, 0, 0, 0);
     background: #070F2E;
-}
-
-#third-section h2 {
-    padding-top: 20px;
-    padding-left: 430px;
-    background: #070F2E;
-    background-clip: content-box;
-    padding-bottom: 0px;
-    max-width: 100%;
-    width: 100%;
-    display: inline;
-    font-family: montserrat, sans-serif;
-    font-weight: 100;
-    font-style: normal;
-    font-size: 2.5em;
-    color: #E9DE81;
-    word-wrap: break-word;
-    text-align: center;
 }
 
 #third-section .sixth {
@@ -238,11 +236,10 @@ header a {
     grid-column: span 1;
     align-content: center;
     border-radius: 10%;
-    margin: 50px 50px;
-    margin-top: 120px;
+    margin-top: 10px;
     margin-bottom: 130px;
     width: 40%;
-    margin-left: 128px;
+    left: 30%;
     
 }
 
@@ -251,10 +248,9 @@ header a {
     grid-column: span 1;
     align-content: center;
     border-radius: 10%;
-    margin: 50px 50px;
     margin-bottom: 90px;
     width: 40%;
-    margin-left: 128px;
+    left: 30%;
 }
 
 
