--- a/nodedir/content/index_styles.css
+++ b/nodedir/content/index_styles.css
@@ -260,36 +260,6 @@ header a {
 }
 
 
-#fourth-section .inner {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-}
-
-#fourth-section h2 {
-    margin: 10px;
-    top: 20px;
-    position: absolute;
-    max-width: calc(100% - 40px);
-    width: calc(100% - 40px);
-    display: block;
-    font-family: montserrat, sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 3em;
-    color: #070F2E;
-    text-align: center;
-    border: 7px solid #070F2E;
-}
-
-#fourth-section img {
-    width: 35%;
-    padding: 15px;
-    margin: 5%;
-    margin-top: 10%;
-    border: 7px solid #070F2E;
-}
-
 .sixth {
     color: black;
     text-align: center;
@@ -460,6 +430,40 @@ header a {
     margin: 0;
     width: 100%;
     word-wrap: break-word;
+}
+
+#fourth-section .inner {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+#fourth-section h2 {
+    margin: 10px;
+    top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: absolute;
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    display: block;
+    font-family: montserrat, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2.75em;
+    color: #fcf6f2;
+    text-align: center;
+    border: 7px solid #070F2E;
+    background-color: #070F2E;
+
+}
+
+#fourth-section img {
+    width: 35%;
+    padding: 15px;
+    margin: 5%;
+    margin-top: 10%;
+    border: 7px solid #070F2E;
 }
 
 footer {
