--- a/index_styles.css
+++ b/index_styles.css
@@ -20,91 +20,134 @@ body {
 }
 
 header {
+    background: #070F2E;
     font-family: sofia-pro, sans-serif;
-    font-weight: 200;
-    position: absolute;
-    padding-left: 220px;
+    font-weight: 300;
+    position: fixed;
+    padding: 0;
     left: 0px;
-    top: -3px;
+    top: 0px;
     right: 0%;
-}
-
-.topnav {
-    overflow: hidden;
-    background-color: #101C48;
-    background-clip: padding-box;
-    padding: 19px;
-}
-
-.topnav a{
-    float: left;
-    color: white;
+    height: 60px;
     text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 14px 30px;
-
+    z-index: 1000;
+    color: #fcf6f2;
 }
 
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+header a {
+    float: left;
+    padding-left: 25px;
+    padding-top: 20px;
 }
 
-.header-img {
-    display: inline;
-    width: 15%;
-    height: 15%;
-    background-color: #101C48;
-    padding: 10.5px;
-    background-clip: padding-box;
-    
+/*#container {
+    position: absolute;
+    min-width: calc(100% - 80px);
+    max-width: calc(100% - 80px);
+    left: 40px;
+    top: 60px;
+    background-color: #fcf6f2;
+}*/
 
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: inherit; 
+  border: none;
+  outline: none;
+  color: inherit;
+  padding-left: 25px;
+  padding-top: 20px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
 
-header p {
-    margin: 0;
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 
 #first-section {
     position: relative;
     height: auto;
-    width: auto;
-    padding-top: 0px;
-    background-color: #101C48;
-    background-clip: padding-box;
+    padding-top: 60px;
+    background-color: #070F2E;
 }
-
 .small {
     display: none;
 }
 
-#second-section {
-    position: relative;
-    height: auto;
-    padding: 0;
-    background-color: #FFFFF;
-    background-size: cover;
-    background-position: center;
-}
+/**#first-section h2 {
+    padding-top: 0px;
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    display: inline-block;
+    font-family: montserrat, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5em;
+    color: #fcf6f2;
+    text-align: center;
+
+}*/
 
 #first-section .chaka-img {
     display: inline;
     height: 100%;
     width: 100%;
-    background-image: url("GroupPhoto.png");
-    background-position: center;
-    background-size: cover;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#second-section {
+    color: black;
+    position: relative;
+    height: auto;
+    padding: 0;
 }
 
 #second-section img {
     width: 40%;
     height: 40%;
-    margin: 10px;
+    margin: 40px;
     margin-right: 20px;
-    padding-left: 30px;
+    padding-left: 10px;
+    margin-left: 0px;
 }
 
 #second-section .inner {
@@ -114,48 +157,107 @@ header p {
 }
 
 #second-section h2 {
-    padding-top: 15px;
     margin: 10px;
+    top: 50px;
+    right: -160px;
+    position: relative;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
-    display: inline-block;
-    font-family: montserrat;
-    font-weight: 800;
+    display: inline;
+    font-family: montserrat, sans-serif;
+    font-weight: 600;
     font-style: normal;
-    font-size: 3.5em;
-    color: black;
-    text-wrap: normal;
-    word-wrap: break-word;
+    font-size: 3em;
+    color: #070F2E;
     text-align: center;
 }
 
 
 #second-section p {
-    padding: 0 20px;
-    margin: 0;
-    margin-bottom: 20px;
+    margin: 20px;
+    padding-top: 90px;
+    margin-top: 0px;
     font-family: sofia-pro, sans-serif;
-    font-weight: 300;
+    font-weight: 600;
     font-style: normal;
-    font-size: 1.25em;
-    color: black;
+    font-size: 1.35em;
+    color: #1f2630;
+    text-align: center;
+    padding-bottom: 63px;
 }
 
-#third-section {
+#second-section .bordertext {
+    border: 2px solid black;
+    display: table;
+    position: relative;
+    top: 40px;
+    right: 10px;
+
+}
+
+#third-section .title {
     position: relative;
     display: inline-grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: auto;
     width: 100%;
-    height: 25vh;
+    padding: 0px;
+    background-color: rgba(0, 0, 0, 0);
+    background: #070F2E;
+    color: #E9DE81;
+    text-align: center;
+    font-family: sofia-pro, sans-serif;
+    font-style: normal;
+    font-size: 2em;
+}
+
+#third-section .toprow {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 100%;
     padding: 0;
-    background-color: #FDB515;
+    background-color: rgba(0, 0, 0, 0);
+    background: #070F2E;
+}
+
+#third-section .bottomrow {
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 100%;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0);
+    background: #070F2E;
 }
 
 #third-section .sixth {
     position: relative;
     grid-column: span 1;
     align-content: center;
+    border-radius: 10%;
+    margin-top: 10px;
+    margin-bottom: 130px;
+    width: 40%;
+    left: 30%;
+    
 }
+
+#third-section .sixthtwo {
+    position: relative;
+    grid-column: span 1;
+    align-content: center;
+    border-radius: 10%;
+    margin-bottom: 90px;
+    width: 40%;
+    left: 30%;
+}
+
+
+#third-section img {
+    width: 40%;
+    margin: 10%;
+}
+
 
 .sixth {
     color: black;
@@ -166,58 +268,145 @@ header p {
     background-color: #fcf6f2;
 }
 
-.apo {
-    border: 7px solid var(--apo);
-    transition: .5s;
+.sixthtwo {
+    color: black;
+    text-align: center;
+    font-family: montserrat, sans-serif;
+    font-weight: 700;
+    font-size: 1.5em;
+    background-color: #fcf6f2;
 }
 
-.apo:hover {
+.apo {
+    border: 7px solid var(--apo);
     background-color: var(--apo);
+
+}
+
+.apo p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 250px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.apo:hover img {
+    transform: scale(1.5);
 }
 
 .ce {
     border: 7px solid var(--ce);
+    background-color: var(--ce);
     transition: .5s;
 }
 
-.ce:hover {
-    background-color: var(--ce);
+.ce p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 210px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.ce:hover img {
+    transform: scale(1.5);
 }
 
 .ej {
     border: 7px solid var(--ej);
+    background-color: var(--ej);
     transition: .5s;
 }
 
-.ej:hover {
-    background-color: var(--ej);
+.ej p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 210px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.ej:hover img {
+    transform: scale(1.5);
 }
 
 .cc {
     border: 7px solid var(--cc);
+    background-color: var(--cc);
     transition: .5s;
 }
 
-.cc:hover {
-    background-color: var(--cc);
+.cc p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 210px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.cc:hover img {
+    transform: scale(1.5);
 }
 
 .tech {
     border: 7px solid var(--tech);
+    background-color: var(--tech);
     transition: .5s;
 }
 
-.tech:hover {
-    background-color: var(--tech);
+.tech p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 210px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.tech:hover img {
+    transform: scale(1.5);
 }
 
 .leg {
     border: 7px solid var(--leg);
+    background-color: var(--leg);
     transition: .5s;
 }
 
-.leg:hover {
-    background-color: var(--leg);
+.leg p {
+    padding: 20px;
+    margin: 20px;
+    padding-top: 210px; /* for the committee/dept names */
+    font-family: sofia-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1em;
+    color: #fcf6f2;
+    text-align: center;
+}
+
+.leg:hover img {
+    transform: scale(1.5);
 }
 
 .sixth p {
@@ -231,13 +420,60 @@ header p {
     word-wrap: break-word;
 }
 
+.sixthtwo p {
+    display: inline;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    margin: 0;
+    width: 100%;
+    word-wrap: break-word;
+}
+
+#fourth-section .inner {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+#fourth-section h2 {
+    margin: 10px;
+    top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: absolute;
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    display: block;
+    font-family: montserrat, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2.75em;
+    color: #fcf6f2;
+    text-align: center;
+    border: 7px solid #070F2E;
+    background-color: #070F2E;
+
+}
+
+#fourth-section img {
+    width: 35%;
+    padding: 15px;
+    margin: 5%;
+    margin-top: 10%;
+    border: 7px solid #070F2E;
+}
+
 footer {
     position: relative;
+    padding: 0;
     font-family: mortise, sans-serif;
     font-weight: 200;
     height: 15vh;
     width: 100%;
     color: #1f2630;
+    background-color: #070F2E;
 }
 
 footer .fa-instagram {
@@ -312,6 +548,10 @@ footer .fa-twitter-square {
         grid-column: span 6 !important;
         padding: 30px 0;
     }
+    .sixthtwo {
+        grid-column: span 6 !important;
+        padding: 30px 0;
+    }
     #third-section {
         height: 100%;
     }
@@ -334,8 +574,9 @@ footer .fa-twitter-square {
         font-size: 10vw;
     }
     header {
-        position: relative;
-        left: 10px;
-        top: 20px;
+        position: fixed;
+        left: 0;
+        top: 0px;
+        width: 100%;
     }
 }
