--- a/index_styles.css
+++ b/index_styles.css
@@ -531,7 +531,7 @@ footer .fa-twitter-square {
     }
     #second-section img {
         display: block;
-        width: 90%;
+        width: 100%;
         padding-bottom: 10px;
         margin: 0;
     }
@@ -578,5 +578,17 @@ footer .fa-twitter-square {
         left: 0;
         top: 0px;
         width: 100%;
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    
+    #mainHeader {
+        background-color: #070F2E;
+    }
+     
+    header a{
+        float:left;
+        width:25%;
     }
 }
