--- a/index_styles.css
+++ b/index_styles.css
@@ -573,10 +573,14 @@ footer .fa-twitter-square {
         right: 25%;
         font-size: 10vw;
     }
-    header {
-        position: fixed;
-        left: 0;
-        top: 0px;
-        width: 50%;
+    
+    header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+      
+    header-right {
+        float: none;
     }
 }
