--- a/index_styles.css
+++ b/index_styles.css
@@ -45,7 +45,7 @@ header a:hover {
   color: black;
 }
 
-.mainHeader .icon {
+header .icon {
   display: none;
 }
 
@@ -500,7 +500,15 @@ footer .fa-twitter-square {
     transform: translate(50%, -50%);
 }
 
-@media (max-width: 900px) {
+@media screen and (max-width: 600px) {
+  header a:not(:first-child) {display: none;}
+  header a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
     #container {
         position: relative;
         max-width: 100vw;
@@ -574,17 +582,17 @@ footer .fa-twitter-square {
         font-size: 10vw;
     }
     
-    .mainHeader.responsive { 
+    header.responsive { 
         position: relative;
     }
 
-    .mainHeader.responsive a.icon {
+    header.responsive a.icon {
         position: absolute;
         right: 0;
         top: 0;
     }
 
-    .mainHeader.responsive a {
+    header.responsive a {
         float: none;
         display: block;
         text-align: left;
