--- a/index_styles.css
+++ b/index_styles.css
@@ -19,57 +19,49 @@ body {
     background-color: #fcf6f2;
 }
 
-header {
-    background: #070F2E;
-    font-family: sofia-pro, sans-serif;
-    font-weight: 300;
-    position: fixed;
-    padding: 0;
-    left: 0px;
-    top: 0px;
-    right: 0%;
-    height: 60px;
-    text-align: center;
-    z-index: 1000;
-    color: #fcf6f2;
+.topnav {
+  overflow: hidden;
+  background-color: #070F2E;
+  font-family:sofia-pro, sans-serif;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
-header a {
-    float: left;
-    padding-left: 25px;
-    padding: 20px;
+.topnav a {
+  float: left;
+  display: block;
+  color: #fcf6f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-header a:hover {
-  background-color: #ddd;
-  color: black;
+.active {
+  background-color: #555;
+  color: white;
 }
 
-header .icon {
+.topnav .icon {
   display: none;
 }
 
-
-/* The dropdown container */
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Dropdown button */
 .dropdown .dropbtn {
-  font-size: inherit; 
+  font-size: 17px;    
   border: none;
   outline: none;
-  color: inherit;
-  padding-left: 25px;
-  padding-top: 20px;
+  color: white;
+  padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font-family: inherit;
+  margin: 0;
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -79,7 +71,6 @@ header .icon {
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
   float: none;
   color: black;
@@ -89,12 +80,16 @@ header .icon {
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
 }
 
-/* Show the dropdown menu on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -103,7 +98,7 @@ header .icon {
 #first-section {
     position: relative;
     height: auto;
-    padding-top: 60px;
+    padding-top: 5px;
     background-color: #070F2E;
 }
 .small {
@@ -501,8 +496,10 @@ footer .fa-twitter-square {
 }
 
 @media screen and (max-width: 600px) {
-  .mainHeader a:not(:first-child) {display: none;}
-  .mainHeader a.icon {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
     float: right;
     display: block;
   }
@@ -583,19 +580,22 @@ footer .fa-twitter-square {
         font-size: 10vw;
     }
     
-    .mainHeader.responsive {
-        position: relative;
-    }
-
-    .mainHeader.responsive a.icon {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
-
-    .mainHeader.responsive a {
+    .topnav.responsive a {
         float: none;
         display: block;
+        text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
         text-align: left;
     }
 
