--- a/index_styles.css
+++ b/index_styles.css
@@ -23,6 +23,7 @@ body {
   overflow: hidden;
   background-color: #070F2E;
   font-family:sofia-pro, sans-serif;
+  padding-top: 10px;
   padding-left: 10px;
 }
 
