--- a/index_styles.css
+++ b/index_styles.css
@@ -154,8 +154,8 @@ body {
 
 #second-section h2 {
     margin: 10px;
-    top: 2.5vw;
-    left: 9vw;
+    top: 4vw;
+    left: 13vw;
     position: relative;
     max-width: calc(100% - 40px);
     width: calc(100% - 40px);
@@ -171,8 +171,8 @@ body {
 
 #second-section p {
     position: relative;
-    padding-top: 2vw;
-    left: -1vw;
+    padding-top: 3vw;
+    left: 3vw;
     font-family: sofia-pro, sans-serif;
     font-weight: 600;
     font-style: normal;
@@ -292,7 +292,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -314,7 +314,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -338,7 +338,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -360,7 +360,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -382,7 +382,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -404,7 +404,7 @@ body {
     font-family: sofia-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1em;
+    font-size: .8em;
     color: #fcf6f2;
     text-align: center;
 }
@@ -467,6 +467,90 @@ body {
   padding-right: 0px;
   width: 35%;
   height: auto;
+}
+
+
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(0,0,0,0.5);
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.2);
+}
+
+
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 
